--- a/index.html
+++ b/index.html
@@ -28,12 +28,8 @@
 
         <section id="section2">
             <h2>Results</h2>
-            <!-- <ul>
-                <li id="left-image"> </li>
-                <li id="middle-image"></li>
-                <li id="right-image"></li>
-            </ul> -->
-            
+        <canvas id="myCanvas" width="150" height="300"></canvas>
+
         </section>
         
         <!-- Paragraph part -->
