--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <section id="section2">
             <h2>Results</h2>
-        <canvas id="myCanvas" width="150" height="300"></canvas>
+        <canvas id="myCanvas" ></canvas>
 
         </section>
         
@@ -47,7 +47,11 @@
         <a>&#169;Bus Mall</a>
         <a>Contact US</a>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
     <script src="app.js"></script>
+    
+    <!-- <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script> -->
+    <!-- <script type="text/javascript"> -->
 </body>
 
 </html>
