--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </section>
         
         <!-- Paragraph part -->
-        <section id="section3">
+        <!-- <section id="section3">
             <p>
                 Lorem ipsum dolor sit amet, aeque torquatos expetendis ut usu, ea movet meliore vis.<br>
                 Volumus sensibus postulant est ei. Dicit vocibus te has. Definitionem interpretaris eu vix,<br>
@@ -45,7 +45,7 @@
                 Vis in accumsan persecuti, te mea soluta atomorum partiendo, pri dicant sanctus scriptorem an.<br>
                 Id his choro inermis luptatum.
             </p>
-        </section>
+        </section> -->
     </main>
     <footer>
         <a>&#169;Bus Mall</a>
