--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
         
         <!-- Paragraph part -->
-        <section id="section3">
+        <!-- <section id="section3">
             <p>
                 Lorem ipsum dolor sit amet, aeque torquatos expetendis ut usu, ea movet meliore vis.<br>
                 Volumus sensibus postulant est ei. Dicit vocibus te has. Definitionem interpretaris eu vix,<br>
@@ -41,7 +41,7 @@
                 Vis in accumsan persecuti, te mea soluta atomorum partiendo, pri dicant sanctus scriptorem an.<br>
                 Id his choro inermis luptatum.
             </p>
-        </section>
+        </section> -->
     </main>
     <footer>
         <a>&#169;Bus Mall</a>
@@ -50,8 +50,6 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
     <script src="app.js"></script>
     
-    <!-- <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script> -->
-    <!-- <script type="text/javascript"> -->
 </body>
 
 </html>
